--- a/fintech/css/new.css
+++ b/fintech/css/new.css
@@ -9,18 +9,20 @@
     position: relative;
     margin: 25px;
     margin-bottom: 35px;
+   
     
     
   }
   #banner{
     position: relative;
-    height:350px;
+    height:400px;
+    
    
     
    
   }
   .banner-show{
-    max-height: 350px;
+    max-height: 400px;
     transition: all 1s linear;
   }
 
@@ -32,12 +34,15 @@
 
     width: 100%;
     max-height:100%;
+    
   }
   
   .banner div img{
     width: 100%;
     max-height:100%;
     border-radius: 5px;
+    box-shadow: inset 15px 0px 15px black;
+    
   }
   .banner-txt{
 
@@ -50,7 +55,7 @@
     color:white;
     font-weight: 400;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: large;
+    font-size: 20px;
     margin:5px;
   }
   .banner-hdr{
@@ -115,6 +120,7 @@
   
   .sidebar{
     flex:1;
+    
     height:1600px;
     background-color: rgb(235, 230, 230);
     overflow:scroll;
@@ -128,7 +134,7 @@
     transition: all 1s linear;
   }
   .second2{
-    flex:15;
+    flex:12;
     transition: all 1s linear;
   
    
@@ -158,3 +164,32 @@
     color:#f88e86;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
+
+  .close-img{
+
+    max-width: 30px;
+    max-height: 30px;
+    position: absolute;
+    right:0;
+    top:0;
+    margin:5px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 2px;
+  }
+
+  /* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
