--- a/fintech/css/page1.css
+++ b/fintech/css/page1.css
@@ -4,6 +4,7 @@ body{
     margin: 0px;
     padding: 0px;
     height: 100%;
+    font-family: "Poppins", sans-serif;
 }
 
 .container1{
@@ -23,7 +24,7 @@ body{
 }
 .container1 p{
 
-    font-size: 25px;
+    font-size: 20px;
 }
 .container2{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -45,12 +46,16 @@ body{
 }
 .container2 .box1 input{
 
-    height: 35px;
-    margin-top:10px;
-    background-color: rgb(235, 230, 230);
-    border: 2px solid rgb(235, 230, 230);
-    width: 350px;
-    border-radius: 6px;
+  border: 1px solid #adaaaa ;
+  background-color: #e4e4e4;
+  height: 34px;
+  /* width: 85%; */
+  padding: 0 5px;
+  border-radius: 3px;
+  box-sizing: border-box;
+  margin:10px 0px;
+  width:300px;
+  opacity: 0.6;
 
 }
 .container2 .box1 #nxtbtn{
@@ -199,6 +204,7 @@ ul.wrapper-accordion li{
   padding: 0px;
   border-bottom: 2px solid #aaa8a8;
   padding: 10px 0px;
+  font-weight: 500;
 }
 
 ul.wrapper-accordion li:nth-of-type(1) {
@@ -225,20 +231,27 @@ ul.wrapper-accordion li:nth-of-type(5) {
 ul.wrapper-accordion li i {
   position: absolute;
   right: 0;
+ 
+  
 }
 
 ul.wrapper-accordion li i:after {
-  content: "-";
+  content: "^";
+  font-stretch: extra-expanded;
   position: absolute;
   background-color: #ed1c24;
   color: white;
-  width: 18px;
-  height: 17px;
+  width: 25px;
+  height: 18px;
+  padding-top:5px;
   border-radius: 50%;
   font-size: 15px;
   right: 5px;
+  
   text-align: center;
   box-shadow: 0px 3px 4px #ccc;
+  transition: all 0.5s linear;
+  
 }
 
 ul.wrapper-accordion li input[type=checkbox]:checked ~ i:after {
@@ -246,13 +259,15 @@ ul.wrapper-accordion li input[type=checkbox]:checked ~ i:after {
   position: absolute;
   background-color: #ed1c24;
   color: white;
-  width: 18px;
-  height: 17px;
+  width: 25px;
+  height: 18px;
   border-radius: 50%;
   font-size: 15px;
   right: 5px;
+  padding-top:3px;
   text-align: center;
   box-shadow: 0px 3px 4px #ccc;
+  transition: all 0.5s linear;
 }
 
 ul.wrapper-accordion li input[type=checkbox] {
@@ -262,11 +277,13 @@ ul.wrapper-accordion li input[type=checkbox] {
   height: 100%;
   z-index: 1;
   opacity: 0;
+  transition: all 0.5s linear;
 }
 
 ul.wrapper-accordion p {
   margin: 0px;
   padding: 15px 5px;
+  transition: all 0.5s linear;
 }
 ul.wrapper-accordion li input[type=checkbox]:checked ~ p {
   margin-top: 0;
@@ -274,6 +291,7 @@ ul.wrapper-accordion li input[type=checkbox]:checked ~ p {
   opacity: 0;
   transform: translate(0, 50%);
   padding: 0px;
+  transition: all 0.5s linear;
 }
 
 
