--- a/fintech/css/page2.css
+++ b/fintech/css/page2.css
@@ -40,7 +40,8 @@ datalist {
 }
 
 .sub-heading {
-  font-weight: bold;
+  font-weight: 500;
+  font-size:20px;
 }
 
 .split {
@@ -299,12 +300,13 @@ ul.wrapper-accordion li i {
 }
 
 ul.wrapper-accordion li i:after {
-  content: "-";
+  content: "^";
   position: absolute;
   background-color: #ed1c24;
   color: white;
-  width: 18px;
-  height: 17px;
+  width: 25px;
+  height: 18px;
+  padding-top:5px;
   border-radius: 50%;
   font-size: 15px;
   right: 5px;
@@ -317,8 +319,9 @@ ul.wrapper-accordion li input[type=checkbox]:checked ~ i:after {
   position: absolute;
   background-color: #ed1c24;
   color: white;
-  width: 18px;
-  height: 17px;
+  width: 25px;
+  height: 18px;
+  padding-top:3px;
   border-radius: 50%;
   font-size: 15px;
   right: 5px;
@@ -508,6 +511,12 @@ border: 2px solid rgba(0, 0, 0, 0.3);
     font-size: 10px;
     left: 90px;
     top: 7px;
+}
+.part-right p{
+font-size:12px;
+font-weight: 800;
+opacity: 0.5;
+margin:0px 0px;
 }
 
 .line {
