--- a/fintech/css/new.css
+++ b/fintech/css/new.css
@@ -1,14 +1,15 @@
 .nav-bar{
 
-    height:40px ;
-    width: 100%;
+   
+    padding:5px;
+    margin: 0px 25px;
     background-color: black;
   }
   
   .banner {
     position: relative;
     margin: 25px;
-    margin-bottom: 35px;
+   
    
     
     
@@ -125,24 +126,26 @@
     background-color: rgb(235, 230, 230);
     overflow:scroll;
     transition: all 1s linear;
-  
+    border:0.5px solid rgb(0, 0, 0,0.2);
+    box-shadow: 10px 10px 25px 2px rgb(0, 0, 0,0.2);
   }
   
   .second{
     flex:5;
     padding:20px;
-    transition: all 1s linear;
+    transition: all 0.5s linear;
   }
   .second2{
     flex:12;
-    transition: all 1s linear;
+    transition: all 0.5s linear;
   
    
   
   }
   .sidebar2{
-    flex:0.5;
-    transition: all 1s linear;
+    flex:0;
+    
+    transition: all 0.5s linear;
   }
   .sidebar2 pre{
   display: none;
@@ -193,3 +196,61 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
 }
+
+.show{
+  
+  display: block;
+  /* -webkit-animation: slide-up 2.3s ease-in;
+  -moz-animation: slide-up 3.3s ease-in; */
+  -webkit-animation: slide-down 2.3s ease-out;
+  -moz-animation: slide-down 3.3s ease-out;
+}
+.hide-animate{
+  -webkit-animation: slide-up 2s ease-out;
+  -moz-animation: slide-up 3.3s ease-out;
+  
+ 
+}
+.hide-now{
+  display: none;
+}
+@-webkit-keyframes slide-up {
+  0%{
+      opacity: 1;
+  }
+
+  100% {
+      opacity: 0;
+  }
+}
+
+@-moz-keyframes slide-up {
+ 0%{
+      opacity: 0;
+  }
+
+  100% {
+      opacity: 1;
+  }
+}
+@-webkit-keyframes slide-down {
+  0% {
+      opacity: 0;
+  }
+
+  100% {
+      opacity: 1;
+  }
+}
+
+@-moz-keyframes slide-down {
+  0% {
+      opacity: 0;
+  }
+
+  100% {
+      opacity: 1;
+  }
+}
+
+/*  */
