--- a/fintech/css/page1.css
+++ b/fintech/css/page1.css
@@ -46,16 +46,29 @@ body{
 }
 .container2 .box1 input{
 
-  border: 1px solid #adaaaa ;
-  background-color: #e4e4e4;
-  height: 34px;
-  /* width: 85%; */
+  border: 2px solid #d5d5d5;
+  background-color:rgb(244, 242, 242);
+  height: 40px;
+  color: black;
+  width:350px;
   padding: 0 5px;
   border-radius: 3px;
   box-sizing: border-box;
   margin:10px 0px;
-  width:300px;
-  opacity: 0.6;
+
+
+
+
+  /* border: 2px solid #d5d5d5;
+  background-color:rgb(244, 242, 242);
+  margin-bottom: 10px;
+  height: 40px;
+  width: 65%;
+  padding: 0 5px;
+  border-radius: 3px;
+  color: black;
+  box-sizing: border-box; */
+  
 
 }
 .container2 .box1 #nxtbtn{
@@ -200,7 +213,7 @@ ul.wrapper-accordion li{
   position: relative;
   padding: 0;
   
-  margin-right:200px;
+  margin-right:20px;
   padding: 0px;
   border-bottom: 2px solid #aaa8a8;
   padding: 10px 0px;
