--- a/fintech/css/new.css
+++ b/fintech/css/new.css
@@ -254,3 +254,27 @@
 }
 
 /*  */
+
+
+.alert {
+  margin-top:10px;
+  padding: 10px;
+  background-color: #f44336;
+  color: white;
+  max-width: 350px;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
