--- a/simon/styles.css
+++ b/simon/styles.css
@@ -51,3 +51,29 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+
+.tool-tip{
+
+  background-color: #011F3F;
+  color: White;
+  border: 2px solid #e7e7e7;
+  border-radius:5px;
+  padding:5px;
+}
+.tool-tip:hover{
+background-color: white;
+color:black;
+
+}
+li{
+  color:white;
+  font-weight:600;
+  font-size: 15px;
+  text-align: left;
+  padding:5px;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+#tooltip{
+  display: none;
+}
