--- a/photography/style.css
+++ b/photography/style.css
@@ -96,18 +96,21 @@ color:white;
     width: 100%;
     display: block;
     border-radius: 2px;
-    transition: transform 0.4s ease, box-shadow 0.4s ease; /* Smooth transition for zoom */
+    transition: background-size 0.4s ease, box-shadow 0.4s ease; /* Smooth transition for zoom */
     opacity: 1;
     object-fit: cover;
-    margin-bottom:1rem;
+    background-size: cover;
+    background-position: center;
+    margin-bottom: 1rem;
     cursor: pointer; /* Change cursor to pointer */
 }
 
 .masonry-grid img:hover {
-    transform: scale(1.2); /* Zoom in on hover */
+    background-size: 120%; /* Slight zoom effect in place */
     z-index: 1;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Add shadow for effect */
 }
+
 
 
 
@@ -215,9 +218,13 @@ color:white;
         padding: 8px;
     }
 
+
     .modal-content {
         max-width: 95%;
         max-height: 75%;
+    }
+    .masonry-grid img{
+        margin-bottom:0.5rem;
     }
 }
 
