--- a/photography/style.css
+++ b/photography/style.css
@@ -8,7 +8,6 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
     background-color: var(--bg-color);
     color: var(--text-color);
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -19,11 +18,12 @@ color:white;
 }
 /* Header */
 .portfolio-header {
+    font-family: "Ms Madi", cursive;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background-color: #FEF8DD;
+    background-color: #abb2b9;
     color: black;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow to the bottom */
 }
@@ -48,6 +48,7 @@ color:white;
 
 /* Profile Section */
 .profile-section {
+    font-family: "Macondo", serif;
     text-align: center;
     padding: 2rem;
 }
